--- a/public/scrape.html
+++ b/public/scrape.html
@@ -23,11 +23,10 @@
       </div>
       </div>
   </div>
-  <a href="/scrape">scrape!</a>
-    <!-- <div id="wrapper">
+    <div id="wrapper">
       <div id="articles"></div>
       <div id="notes"></div>
-    </div> -->
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
