--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,9 @@
       </div>
       </div>
   </div>
-  <a href="/scrape">scrape!</a>
-    <!-- <div id="wrapper">
-      <div id="articles"></div>
-      <div id="notes"></div>
-    </div> -->
+    <div id="wrapper">
+      <a  href="/scrape"><h1>scrape!</h1></a>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
